// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./Countdown.stories Days 1`] = `
<div
  class="MuiBox-root css-1i27l4i"
>
  <div>
    <span
      class="MuiTypography-root MuiTypography-body1 css-w5uidf-MuiTypography-root"
    >
      2
    </span>
     
    <span
      class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
    >
      days
    </span>
  </div>
</div>
`;

exports[`./Countdown.stories DaysHoursMinutes 1`] = `
<div
  class="MuiBox-root css-1i27l4i"
>
  <div>
    <span
      class="MuiTypography-root MuiTypography-body1 css-w5uidf-MuiTypography-root"
    >
      2
    </span>
     
    <span
      class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
    >
      days
    </span>
  </div>
  <div>
    <span
      class="MuiTypography-root MuiTypography-body1 css-w5uidf-MuiTypography-root"
    >
      2
    </span>
     
    <span
      class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
    >
      hrs
    </span>
  </div>
  <div>
    <span
      class="MuiTypography-root MuiTypography-body1 css-w5uidf-MuiTypography-root"
    >
      15
    </span>
     
    <span
      class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
    >
      mins
    </span>
  </div>
</div>
`;

exports[`./Countdown.stories Hours 1`] = `
<div
  class="MuiBox-root css-1i27l4i"
>
  <div>
    <span
      class="MuiTypography-root MuiTypography-body1 css-w5uidf-MuiTypography-root"
    >
      2
    </span>
     
    <span
      class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
    >
      hrs
    </span>
  </div>
</div>
`;

exports[`./Countdown.stories HoursAndMinutes 1`] = `
<div
  class="MuiBox-root css-1i27l4i"
>
  <div>
    <span
      class="MuiTypography-root MuiTypography-body1 css-w5uidf-MuiTypography-root"
    >
      2
    </span>
     
    <span
      class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
    >
      hrs
    </span>
  </div>
  <div>
    <span
      class="MuiTypography-root MuiTypography-body1 css-w5uidf-MuiTypography-root"
    >
      5
    </span>
     
    <span
      class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
    >
      mins
    </span>
  </div>
</div>
`;

exports[`./Countdown.stories LessThanOneMinute 1`] = `
<span
  class="MuiTypography-root MuiTypography-body1 css-w5uidf-MuiTypography-root"
>
  &lt; 1 min
</span>
`;

exports[`./Countdown.stories Minutes 1`] = `
<div
  class="MuiBox-root css-1i27l4i"
>
  <div>
    <span
      class="MuiTypography-root MuiTypography-body1 css-w5uidf-MuiTypography-root"
    >
      5
    </span>
     
    <span
      class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
    >
      mins
    </span>
  </div>
</div>
`;

exports[`./Countdown.stories Zero 1`] = `null`;
